Fix bugs on mobile

--- a/source/styles/base.sass
+++ b/source/styles/base.sass
@@ -21,6 +21,7 @@ body
 
     #header
       background-color: $dark
+      border-bottom-color: $dark
 
     #logo
       .logo__white
