--- a/source/styles/hero.sass
+++ b/source/styles/hero.sass
@@ -17,13 +17,11 @@
     max-width: 770px
 
   &__screen
+    max-width: 570px
     margin-top: 40px
+    line-height: 0
 
   &__screen img
-    position: relative
-    top: 100px
-    margin-top: -100px
-    width: 570px
     z-index: 2
 
   .buttons
