--- a/source/styles/mobile-menu.sass
+++ b/source/styles/mobile-menu.sass
@@ -9,7 +9,6 @@
   z-index: $zMobileMenu
   background-color: $dark
   transition: $transition
-  // default hidden
   opacity: 0
   visibility: hidden
 
@@ -21,7 +20,7 @@
     top: 50%
     transform: translateY(-50%)
     font-size: 24px
-    font-weight: bold
+    font-family: $fontBold
 
   &__el
     margin-bottom: 30px
